# CodeCanvas

./: index.html  index.py
cloud-ops-platform/: iam-policy-readonly.json  package-lock.json  package.json  vercel.json
cloud-ops-platform/src/app/: layout.tsx  page.tsx
cloud-ops-platform/src/components/: AppProvider.tsx  (+6 more)
git-health-analyser/: PRODUCT_DESIGN.md  docker-compose.yml
git-health-analyser/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
git-health-analyser/backend/app/: config.py  main.py
git-health-analyser/backend/app/api/: deps.py
git-health-analyser/backend/app/api/v1/: analytics.py  auth.py  health.py  repos.py  router.py  webhooks.py
git-health-analyser/backend/app/core/analysis/: cicd.py  commits.py  contributors.py  dependencies.py  documentation.py  issues.py  ownership.py  pipeline.py  pull_requests.py  releases.py
git-health-analyser/backend/app/core/github/: client.py  rate_limiter.py
git-health-analyser/backend/app/core/scoring/: engine.py  risk_detector.py
git-health-analyser/backend/app/core/security/: auth.py  encryption.py
git-health-analyser/backend/app/models/: __init__.py  analysis_report.py  commit.py  contributor.py  health_metric.py  issue.py  pull_request.py  repository.py  user.py
git-health-analyser/backend/app/schemas/: auth.py  common.py  health.py  repos.py
git-health-analyser/backend/app/workers/: analysis_tasks.py  celery_app.py
git-health-analyser/frontend/: next.config.js  package.json  tailwind.config.ts
myportfolio/: index.html
portfolio/: index.html  main.js  styles.css
(+47 files in other folders)
